deploy/k8s/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/mshade/taskly-frontend:${RELEASE_TAG}
        resources: {}
        ports:
          - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app:  frontend
  type:  ClusterIP
  ports:
  - name:  web
    port:  80
    targetPort:  8080
---
